Fix proxy host for OpenSSH

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -2,7 +2,7 @@ Host github.com
     User git
     HostName ssh.github.com
     Port 443
-    ProxyCommand nc -x localhost:7890 %h %p
+    ProxyCommand nc -x 127.0.0.1:7890 %h %p
     AddKeysToAgent yes
     IdentityFile ~/.ssh/id_ed25519
     UseKeychain yes
